fix(app): Fix robot list scroll clipping
closes #2046

--- a/components/src/nav/SidePanel.css
+++ b/components/src/nav/SidePanel.css
@@ -33,7 +33,7 @@
 
 .panel_contents {
   width: var(--sidebar-width);
-  height: calc(100vh - 2.625rem);
+  height: calc(100vh - 4.25rem);
   overflow-x: hidden;
   overflow-y: auto;
 }
